# hermes-agent-ultra

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  EQUITY_RESEARCH_TODO.md  GAP_ANALYSIS.md  LICENSE  Makefile  NOTICE  PARITY_PLAN.md  README.md  README_JA.md  README_KO.md  README_QUICKSTART.md  README_ZH.md  TODO.md  UPSTREAM_ATTRIBUTION.md  batch_runner.py  cli-config.yaml.example  cli.py  docker-compose.yml  flake.nix  image_generation_tool.py  model_tools.py  package-lock.json  package.json  requirements.txt  run_agent.py  run_datagen_minimax-3.1.sh  test_api_call_reasoning.py  test_web_tools.py  toolset_distributions.py  toolsets.py
crates/hermes-acp/: Cargo.toml
crates/hermes-acp-server/: Cargo.toml
crates/hermes-acp-server/examples/: standalone.rs
crates/hermes-acp-server/src/: connection.rs  event_bridge.rs  lib.rs  ndjson.rs  server.rs  session.rs
crates/hermes-acp-server/tests/: prompt_test.rs  smoke.rs
crates/hermes-acp/src/: auth.rs  events.rs  handler.rs  lib.rs  permissions.rs  protocol.rs  server.rs  session.rs  tools.rs
crates/hermes-agent/: Cargo.toml
crates/hermes-agent/src/: agent_callbacks.rs  agent_config.rs  agent_loop.rs  agent_runtime_helpers.rs  agent_state.rs  api_bridge.rs  api_message_oracle.rs  api_messages.rs  auxiliary_builder.rs  bedrock.rs  budget.rs  cache_diagnostics.rs  chat_completion_helpers.rs  code_index.rs  codex_responses_adapter.rs  codex_runtime.rs  coding_context.rs  compression.rs  context.rs  context_files.rs  context_references.rs  conversation_loop.rs  copilot_acp.rs  credential_pool.rs  equity_research_gate.rs  error_classifier.rs  evolution_ledger.rs  fallback.rs  governor.rs  honcho_provider.rs  hooks.rs  inbound_prepare.rs  interrupt.rs  lib.rs  llm_caller.rs  local_backends.rs  loop_exit.rs  lsp_context.rs  memory_manager.rs  message_sanitization.rs  (+36 more)
crates/hermes-agent/tests/: alignment_contracts.rs  api_message_golden.rs  cache_hit_e2e.rs  cache_hit_rate_mock.rs  e2e_agent_loop.rs  parity_self_evolution_fixtures.rs  plan_mode_integration.rs  prop_budget.proptest-regressions  prop_budget.rs  prop_max_turns.rs  run_agent_phase_a.rs  run_conversation_contracts.rs  session_reset_state.rs  tool_registry_cache.rs
crates/hermes-app-runtime/: Cargo.toml
crates/hermes-app-runtime/src/: lib.rs  lib_tests.rs
crates/hermes-audio/: Cargo.toml
crates/hermes-audio/src/: capture.rs  frame.rs  lib.rs  loopback.rs  mixer.rs  recorder.rs  vad.rs
crates/hermes-auth/: Cargo.toml
crates/hermes-auth/src/: lib.rs
crates/hermes-auth/tests/: oauth_token_exchange.rs
crates/hermes-bundled-rg/: Cargo.toml  build.rs
crates/hermes-bundled-rg/src/: lib.rs
crates/hermes-cli/: Cargo.toml  build.rs
crates/hermes-cli/src/: acp_command.rs  alpha_runtime.rs  app.rs  auth.rs  auth_main.rs  banner.rs  billing.rs  checklist.rs  claw_migrate.rs  cli.rs  cli_setup.rs  cloudflare.rs  commands.rs  config_env.rs  copilot_auth.rs  cron_delivery.rs  cron_main.rs  dep_ensure.rs  dispatch.rs  doctor.rs  env_loader.rs  env_vars.rs  gateway_handlers.rs  gateway_inbound_wiring.rs  gateway_main.rs  gateway_plan_mode.rs  gateway_process.rs  gateway_runtime.rs  gateway_runtime_defaults.rs  interactive_lock.rs  kanban.rs  kanban_cli.rs  lib.rs  live_messaging.rs  lumio.rs  main.rs  main_tests.rs  mcp_config.rs  misc_main.rs  model_switch.rs  (+28 more)
crates/hermes-cli/tests/: e2e_cli.rs  e2e_gateway_cron_webhook.rs  e2e_gateway_process.rs  e2e_replay_suite.rs  e2e_sota_workflow_replay.rs  e2e_webhook_cron.rs
crates/hermes-config/: Cargo.toml  config.example.yaml
crates/hermes-config/src/: config.rs  dep_check.rs  dep_gate.rs  insights.rs  interest.rs  lib.rs  loader.rs  managed_node.rs  merge.rs  migrate.rs  paths.rs  platform.rs  python_platform_env.rs  python_yaml_compat.rs  roundtrip_tests.rs  server.rs  session.rs  streaming.rs  voice.rs  web_research.rs
crates/hermes-config/tests/: dep_check_tests.rs  prop_config_roundtrip.rs
crates/hermes-core/: Cargo.toml  build.rs
crates/hermes-core/src/: auth_gate.rs  credits.rs  errors.rs  inbound.rs  lib.rs  providers.rs  schema_sanitizer.rs  subprocess.rs  subprocess_env.rs  test_env.rs  test_generators.rs  time.rs  token_estimator.rs  tool_call_parser.rs  tool_schema.rs  traits.rs  types.rs  version.rs
crates/hermes-core/tests/: prop_invalid_json_tool_call.rs  prop_reasoning_content.rs  prop_tool_call_parser.rs
crates/hermes-cron/: Cargo.toml
crates/hermes-cron/src/: backend.rs  blueprints.rs  chronos.rs  cli_support.rs  completion.rs  delivery.rs  job.rs  lib.rs  persistence.rs  python_job.rs  runner.rs  schedule.rs  scheduler.rs  suggestions.rs  timing.rs
crates/hermes-environments/: Cargo.toml
crates/hermes-environments/src/: daytona.rs  docker.rs  file_sync.rs  lib.rs  local.rs  managed_modal.rs  manager.rs  modal.rs  singularity.rs  ssh.rs
crates/hermes-environments/tests/: backend_integration.rs
crates/hermes-eval/: Cargo.toml  README.md
crates/hermes-eval/benchmarks/: configured-smoke.toml  live-behavioral-sota.toml
crates/hermes-eval/src/: adapter.rs  agent_rollout.rs  batch_runner.rs  configured.rs  error.rs  lib.rs  mini_swe_runner.rs  reporter.rs  result.rs  runner.rs  tblite.rs  verifier.rs
crates/hermes-gateway/: Cargo.toml
crates/hermes-gateway/src/: adapter.rs  agent_cache.rs  attachment_inference.rs  background.rs  channel_directory.rs  clarify_session.rs  commands.rs  (+23 more)
crates/hermes-http/: Cargo.toml
crates/hermes-intelligence/: Cargo.toml
crates/hermes-mcp/: Cargo.toml
crates/hermes-parity-tests/: Cargo.toml
crates/hermes-protocol-parity-tests/: Cargo.toml
crates/hermes-provider-runtime/: Cargo.toml
crates/hermes-rl/: Cargo.toml
crates/hermes-server-client/: Cargo.toml
crates/hermes-skills/: Cargo.toml  threat_patterns.json
crates/hermes-source-parity-tests/: Cargo.toml
crates/hermes-talk/: .gitignore  Cargo.toml  build.rs  config.example.toml
crates/hermes-telemetry/: Cargo.toml
crates/hermes-tool-planning/: Cargo.toml
crates/hermes-tools/: Cargo.toml
crates/hermes-verticals/: Cargo.toml
(+1446 files in other folders)
