[workspace]
resolver = "2"
members = [
    "crates/hermes-core",
    "crates/hermes-audio",
    "crates/hermes-agent",
    "crates/hermes-tools",
    "crates/hermes-gateway",
    "crates/hermes-cli",
    "crates/hermes-cron",
    "crates/hermes-skills",
    "crates/hermes-mcp",
    "crates/hermes-environments",
    "crates/hermes-config",
    "crates/hermes-intelligence",
    "crates/hermes-acp",
    "crates/hermes-eval",
    "crates/hermes-http",
    "crates/hermes-auth",
    "crates/hermes-telemetry",
    "crates/hermes-parity-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sheawinkler/hermes-agent-ultra"

[workspace.dependencies]
# Internal crates
hermes-core = { path = "crates/hermes-core" }
hermes-audio = { path = "crates/hermes-audio" }
hermes-agent = { path = "crates/hermes-agent" }
hermes-tools = { path = "crates/hermes-tools" }
hermes-gateway = { path = "crates/hermes-gateway" }
hermes-cli = { path = "crates/hermes-cli" }
hermes-cron = { path = "crates/hermes-cron" }
hermes-skills = { path = "crates/hermes-skills" }
hermes-mcp = { path = "crates/hermes-mcp" }
hermes-environments = { path = "crates/hermes-environments" }
hermes-config = { path = "crates/hermes-config" }
hermes-intelligence = { path = "crates/hermes-intelligence" }
hermes-acp = { path = "crates/hermes-acp" }
hermes-eval = { path = "crates/hermes-eval" }
hermes-http = { path = "crates/hermes-http" }
hermes-auth = { path = "crates/hermes-auth" }
hermes-telemetry = { path = "crates/hermes-telemetry" }
hermes-parity-tests = { path = "crates/hermes-parity-tests" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP / networking
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls", "form", "query"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
eventsource-stream = "0.2"

# Error handling & logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI & TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
tui-textarea = { package = "tui-textarea-2", version = "0.11" }

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.16"

# Utils
regex = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
bytes = "1"
url = "2"
directories = "6"
minijinja = "2"
jsonwebtoken = "10"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
proptest = "1"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries"] }
