[workspace]
resolver = "2"
members = [
    "crates/hermes-core",
    "crates/hermes-audio",
    "crates/hermes-agent",
    "crates/hermes-tools",
    "crates/hermes-gateway",
    "crates/hermes-cli",
    "crates/hermes-cron",
    "crates/hermes-skills",
    "crates/hermes-mcp",
    "crates/hermes-environments",
    "crates/hermes-config",
    "crates/hermes-bundled-rg",
    "crates/hermes-intelligence",
    "crates/hermes-acp",
    "crates/hermes-eval",
    "crates/hermes-http",
    "crates/hermes-auth",
    "crates/hermes-telemetry",
    "crates/hermes-insights",
    "crates/hermes-server-client",
    "crates/hermes-acp-server",
    "crates/hermes-wiki",
    "crates/hermes-trading",
    "crates/hermes-media-workflows",
    "crates/hermes-parity-tests",
    "crates/hermes-strategies",
    "crates/hermes-market-watch",
    "crates/hermes-copilot-lite",
    "crates/hermes-talk",
]

[workspace.package]
version = "0.17.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Michael-Lfx/hermes-agent-ultra"

[workspace.dependencies]
# Internal crates
hermes-core = { path = "crates/hermes-core" }
hermes-audio = { path = "crates/hermes-audio" }
hermes-agent = { path = "crates/hermes-agent" }
hermes-tools = { path = "crates/hermes-tools" }
hermes-gateway = { path = "crates/hermes-gateway" }
hermes-cli = { path = "crates/hermes-cli" }
hermes-cron = { path = "crates/hermes-cron" }
hermes-skills = { path = "crates/hermes-skills" }
hermes-mcp = { path = "crates/hermes-mcp" }
hermes-environments = { path = "crates/hermes-environments" }
hermes-config = { path = "crates/hermes-config" }
hermes-bundled-rg = { path = "crates/hermes-bundled-rg" }
hermes-intelligence = { path = "crates/hermes-intelligence" }
hermes-acp = { path = "crates/hermes-acp" }
hermes-eval = { path = "crates/hermes-eval" }
hermes-http = { path = "crates/hermes-http" }
hermes-auth = { path = "crates/hermes-auth" }
hermes-telemetry = { path = "crates/hermes-telemetry" }
hermes-insights = { path = "crates/hermes-insights" }
hermes-server-client = { path = "crates/hermes-server-client" }
hermes-acp-server = { path = "crates/hermes-acp-server" }
hermes-wiki = { path = "crates/hermes-wiki" }
hermes-trading = { path = "crates/hermes-trading" }
hermes-media-workflows = { path = "crates/hermes-media-workflows" }
hermes-parity-tests = { path = "crates/hermes-parity-tests" }
hermes-strategies = { path = "crates/hermes-strategies" }
hermes-market-watch = { path = "crates/hermes-market-watch" }
hermes-copilot-lite = { path = "crates/hermes-copilot-lite" }
hermes-talk = { path = "crates/hermes-talk", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_path_to_error = "0.1"

# HTTP / networking
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls", "form", "query", "socks"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
eventsource-stream = "0.2"

# Error handling & logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI & TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
tui-textarea = { package = "tui-textarea-2", version = "0.11" }

# Database
rusqlite = { version = "0.36", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.16"

# Utils
regex = "1"
aho-corasick = "1"
scraper = "0.23"
async-trait = "0.1"
# TODO: re-enable after CI can reliably fetch pdfium (liteparse-pdfium-sys build.rs download)
# liteparse = { version = "2", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
bytes = "1"
url = "2"
directories = "6"
minijinja = "2"
jsonwebtoken = "10"
indexmap = { version = "2", features = ["serde"] }
proptest = "1"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries"] }
which = "8"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rqrr = "0.9"
indicatif = "0.18"

# hermes-talk (voice dialog)
cpal = "0.15"
sherpa-onnx = { path = "crates/sherpa-onnx", default-features = false, features = ["static"] }
aec-rs = "1.0"
webrtc-vad = "0.4"
pinyin = "0.11"
toml = "0.8"
async-stream = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = "0.7"
