[package]
name = "hermes-acp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone ACP Agent Server with cross-platform IPC transport"

[dependencies]
hermes-acp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true }
futures = { workspace = true }
dirs = "6"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util", "macros"] }
