[package]
name = "hermes-acp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent Communication Protocol adapter for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
