[package]
name = "hermes-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent loop engine for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
hermes-config = { workspace = true }
hermes-insights = { workspace = true }
hermes-auth = { workspace = true }
hermes-intelligence = { workspace = true }
hermes-tools = { workspace = true }
hermes-skills = { workspace = true }
hermes-telemetry = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
which = "8"
eventsource-stream = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3"
lazy_static = "1"
dirs = "6"
rusqlite = { workspace = true }
serde_yaml = { workspace = true }
shlex = "2.0.1"
uuid = { workspace = true, features = ["v4"] }
syn = { version = "2", features = ["full"] }
sha1 = "0.10"
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
tokio-stream = { workspace = true }
