[package]
name = "hermes-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio capture abstractions (mic, loopback, VAD) shared by voice mode and meeting recorder"

[dependencies]
hermes-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[dependencies.ort]
workspace = true
optional = true

[features]
silero-vad = ["ort"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
