[package]
name = "hermes-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified authentication and credential management for Hermes"

[dependencies]
hermes-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
sha2 = "0.10"
uuid = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
