[package]
name = "hermes-bundled-rg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ripgrep binary embedded at build time for the current TARGET triple"

[build-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
flate2 = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
tar = "0.4"
