[package]
name = "hermes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI/TUI interface for Hermes Agent"
autobins = false

[features]
default = []
otlp = ["hermes-telemetry/otlp"]

[[bin]]
name = "hermes"
path = "src/bin/hermes.rs"

[[bin]]
name = "hermes-ultra"
path = "src/bin/hermes-ultra.rs"

[[bin]]
name = "hermes-agent-ultra"
path = "src/main.rs"

[dependencies]
hermes-core = { workspace = true }
hermes-agent = { workspace = true }
hermes-tools = { workspace = true }
hermes-config = { workspace = true }
hermes-gateway = { workspace = true, features = [
    "telegram",
    "discord",
    "slack",
    "whatsapp",
    "signal",
    "matrix",
    "mattermost",
    "dingtalk",
    "feishu",
    "wecom",
    "wecom-callback",
    "weixin",
    "qqbot",
    "bluebubbles",
    "email",
    "sms",
    "homeassistant",
    "api-server",
    "webhook",
] }
hermes-cron = { workspace = true }
hermes-environments = { workspace = true }
hermes-mcp = { workspace = true }
hermes-acp = { workspace = true }
hermes-skills = { workspace = true }
hermes-auth = { workspace = true }
hermes-telemetry = { workspace = true }
hermes-intelligence = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dirs = "6"
reqwest = { workspace = true, features = ["blocking"] }
flate2 = "1"
tar = "0.4"
serde_yaml = "0.9"
regex = { workspace = true }
urlencoding = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = { workspace = true }
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
wiremock = "0.6"
chrono = { workspace = true }
hermes-core = { workspace = true }
hermes-cron = { workspace = true }
