[package]
name = "hermes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI/TUI interface for Hermes Agent"
autobins = false

[features]
default = ["gateway-adapters-all"]
otlp = ["hermes-telemetry/otlp"]
swarms = ["hermes-intelligence/swarms"]
gateway-adapters-all = [
    "gateway-telegram",
    "gateway-discord",
    "gateway-slack",
    "gateway-whatsapp",
    "gateway-signal",
    "gateway-matrix",
    "gateway-mattermost",
    "gateway-dingtalk",
    "gateway-feishu",
    "gateway-wecom",
    "gateway-wecom-callback",
    "gateway-weixin",
    "gateway-qqbot",
    "gateway-bluebubbles",
    "gateway-email",
    "gateway-sms",
    "gateway-homeassistant",
    "gateway-ntfy",
    "gateway-api-server",
    "gateway-webhook",
]
gateway-telegram = ["hermes-gateway/telegram"]
gateway-discord = ["hermes-gateway/discord"]
gateway-slack = ["hermes-gateway/slack"]
gateway-whatsapp = ["hermes-gateway/whatsapp"]
gateway-signal = ["hermes-gateway/signal"]
gateway-matrix = ["hermes-gateway/matrix"]
gateway-mattermost = ["hermes-gateway/mattermost"]
gateway-dingtalk = ["hermes-gateway/dingtalk"]
gateway-feishu = ["hermes-gateway/feishu"]
gateway-wecom = ["hermes-gateway/wecom"]
gateway-wecom-callback = ["hermes-gateway/wecom-callback"]
gateway-weixin = ["hermes-gateway/weixin"]
gateway-qqbot = ["hermes-gateway/qqbot"]
gateway-bluebubbles = ["hermes-gateway/bluebubbles"]
gateway-email = ["hermes-gateway/email"]
gateway-sms = ["hermes-gateway/sms"]
gateway-homeassistant = ["hermes-gateway/homeassistant"]
gateway-ntfy = ["hermes-gateway/ntfy"]
gateway-api-server = ["hermes-gateway/api-server"]
gateway-webhook = ["hermes-gateway/webhook"]

[[bin]]
name = "hermes"
path = "src/bin/hermes.rs"

[[bin]]
name = "hermes-ultra"
path = "src/bin/hermes-ultra.rs"

[[bin]]
name = "hermes-agent-ultra"
path = "src/main.rs"

[dependencies]
hermes-core = { workspace = true }
hermes-provider-runtime = { workspace = true }
hermes-app-runtime = { workspace = true }
hermes-agent = { workspace = true }
hermes-tools = { workspace = true }
hermes-config = { workspace = true }
hermes-gateway = { workspace = true }
hermes-cli-ui = { workspace = true }
hermes-cron = { workspace = true }
hermes-environments = { workspace = true }
hermes-mcp = { workspace = true }
hermes-acp = { workspace = true }
hermes-skills = { workspace = true }
hermes-auth = { workspace = true }
hermes-telemetry = { workspace = true }
hermes-intelligence = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dirs = "6"
reqwest = { workspace = true, features = ["blocking"] }
flate2 = "1"
tar = "0.4"
serde_yaml = "0.9"
regex = { workspace = true }
urlencoding = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = { workspace = true }
bytes = { workspace = true }
aes-gcm = "0.10"
rand = "0.10.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
shlex = "1.3.0"
arboard = "3.4"
unicode-width = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
wiremock = "0.6"
chrono = { workspace = true }
hermes-core = { workspace = true }
hermes-cron = { workspace = true }
