[package]
name = "hermes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI/TUI interface for Hermes Agent"
autobins = false
build = "build.rs"

[features]
default = []
otlp = ["hermes-telemetry/otlp"]
swarms = ["hermes-intelligence/swarms"]
talk = ["dep:hermes-talk", "hermes-talk/sherpa-asr-tts"]
talk-rockchip = ["dep:hermes-talk", "hermes-talk/rockchip"]

[[bin]]
name = "hermes"
path = "src/bin/hermes.rs"

[[bin]]
name = "hermes-agent-ultra"
path = "src/main.rs"

[dependencies]
hermes-core = { workspace = true }
hermes-agent = { workspace = true }
hermes-tools = { workspace = true, features = ["full"] }
hermes-config = { workspace = true }
hermes-bundled-rg = { workspace = true }
hermes-gateway = { workspace = true, features = [
    "telegram",
    "discord",
    "slack",
    "whatsapp",
    "signal",
    "matrix",
    "mattermost",
    "dingtalk",
    "feishu",
    "wecom",
    "wecom-callback",
    "weixin",
    "qqbot",
    "bluebubbles",
    "email",
    "sms",
    "homeassistant",
    "ntfy",
    "api-server",
    "webhook",
] }
hermes-cron = { workspace = true }
hermes-environments = { workspace = true }
hermes-mcp = { workspace = true }
hermes-acp = { workspace = true }
hermes-skills = { workspace = true }
hermes-auth = { workspace = true }
hermes-telemetry = { workspace = true }
hermes-acp-server = { workspace = true }
hermes-intelligence = { workspace = true }
hermes-insights = { workspace = true }
hermes-server-client = { workspace = true }
hermes-talk = { workspace = true, optional = true }
hermes-media-workflows = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dirs = "6"
reqwest = { workspace = true, features = ["blocking", "stream"] }
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
sevenz-rust = "0.6"
serde_yaml = "0.9"
regex = { workspace = true }
urlencoding = "2"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
base64 = { workspace = true }
bytes = { workspace = true }
aes-gcm = "0.10"
rand = "0.10"
zip = { version = "8", default-features = false, features = ["deflate"] }
shlex = "2.0.1"
arboard = "3.6"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
unicode-width = "0.2"
keepawake = "0.6"
qrcode = { workspace = true }
indicatif = { workspace = true }
semver = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Power"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
wiremock = "0.6"
chrono = { workspace = true }
hermes-core = { workspace = true }
hermes-cron = { workspace = true }
