[package]
name = "hermes-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
url = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
