[package]
name = "hermes-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_path_to_error = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
url = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
which = { workspace = true }

[features]
default = []
# Exposes `managed_gateway::test_lock` so downstream crates' tests can
# serialise on the same global env-var lock and avoid races.
test-helpers = []

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
