[package]
name = "hermes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and error types for Hermes Agent"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
