[package]
name = "hermes-cron"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cron scheduler for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
hermes-agent = { workspace = true }
hermes-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
