[package]
name = "hermes-environments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal backends and environment management for Hermes Agent"

[features]
default = []
docker = []
ssh = []
daytona = []
modal = []
singularity = []

[dependencies]
hermes-core = { workspace = true }
hermes-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"