[package]
name = "hermes-gateway"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Message gateway and platform adapters for Hermes Agent"

[features]
default = []
telegram = []
discord = ["dep:hermes-skills"]
slack = []
whatsapp = []
signal = []
matrix = ["dep:matrix-sdk-crypto", "dep:ruma"]
mattermost = []
dingtalk = []
feishu = []
wecom = ["dep:aes"]
wecom-callback = ["dep:aes"]
weixin = ["dep:aes", "dep:rand"]
qqbot = []
bluebubbles = []
email = []
sms = []
homeassistant = []
api-server = []
webhook = []

[dependencies]
hermes-core = { workspace = true }
hermes-config = { workspace = true }
hermes-skills = { workspace = true, optional = true }
hermes-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
tokio-tungstenite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
urlencoding = "2"
md5 = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "1.0"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
hmac = "0.13"
sha2 = "0.11"
sha1 = "0.11"
base64 = { workspace = true }
matrix-sdk-crypto = { version = "0.17", optional = true }
ruma = { version = "0.16.0", features = ["client-api-c", "rand"], optional = true }
aes = { version = "0.9", optional = true }
rand = { version = "0.10", optional = true }
prost = "0.14.3"

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
wiremock = "0.6"
