[package]
name = "hermes-intelligence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smart router, error classifier, usage tracking, and prompt builder for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
minijinja = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[features]
default = ["rl"]
rl = []

[dev-dependencies]
proptest = { workspace = true }
